# chesstic_finnacel

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  QUICK_DEPLOY.md  README.md  SAFE_UPDATE_GUIDE.md  config.py  deploy.sh  gunicorn_config.py  main.py  manual_test_api.py  package.json  playwright.config.ts  pyproject.toml  quick_deploy.sh  requirements.txt  run.py  test_analytics_debug.py  test_api_response.py  test_async_mistake_analysis.py  test_debug_api.py  test_gtm_browser.py  test_gtm_integration.py  test_lichess_connectivity.py  test_lichess_diagnostic.py  test_mistake_analysis.py  test_mistake_analysis_ui_toggle.py  test_mistake_analysis_working.py  test_openai_key.py  test_opening_count.py  test_quick_verify.py  test_stockfish_fallback_speed.py  update.sh  verify_dependencies.sh
.github/: copilot-instructions.md
.github/agents/: data_analyst.md  deployment_engineer_agent.md  engineer-agent.md  junior_product_manager.md  playwright-tester-agent.md  prd-agent.md  senior_system_analyst.md
.github/analysis/: chesstic_analysis.ipynb
.github/docs/: deployment_guide.md  prd_overview_data_analysis.md  testing_strategy.md
app/: __init__.py
app/routes/: __init__.py  api.py  views.py
docs/: bug_fixes.md  documentation.md  milestone_progress.md
templates/: analytics.html  index.html
tests/: README.md  test_analytics_service.py  test_api.py  test_contract_validation.py  test_integration_e2e.py  test_lichess_evaluation_service.py  test_mistake_analysis_service.py  test_performance_lichess.py  test_timezone_utils.py  test_validators.py  test_views.py
(+41 files in other folders)
